--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pklauzinski/jscroll.git"
+    "url": "https://github.com/nickmonologg/jscrolling.git"
   },
   "keywords": [
     "jscroll",
